<resources>
    <string name="app_name">DaftarPencarianOrang</string>
    <string name="missing">Info Kehilangan</string>
    <string name="add">Tambah</string>
    <string name="notification">Pusat Informasi</string>
    <string name="account">Akun</string>
    <string name="fill_the_form">Isilah form, Kami akan membagikan Poster Daftar Pencarian Anda kepada Semua Orang</string>
    <string name="don_t_worry">Jangan Cemas</string>
    <string name="be_patient">Bersabar</string>
    <string name="we_are_with_you">Kami Bersama Anda</string>
    <string name="fill_the_form_btn">Isi Form</string>
    <string name="nama_lengkap">Nama Lengkap*</string>
    <string name="laki_lagi">Laki - Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="hadiah_opsional">Hadiah (Opsional)</string>
    <string name="dummy">Let\'s try to run your application.\n I assume you have connected your actual Android Mobile device with your computer. To run the app from android studio,\n open one of your project\'s activity files and click Run icon from the toolbar. \n Select your mobile device as an option and then check your mobile device which will display your default screen Let\'s try to run your application. I assume you have connected your actual Android Mobile device with your computer. To run the app from \n android studio, open one of your project\'s activity files and click Run \n icon from the toolbar. Select your mobile device as an option and then \n check your mobile device which will display your default screen \n Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu.</string>
    <string name="masuk_untuk_akun">Sudah memiliki akun ? Masuk <b>Disini</b></string>
    <string name="daftar_akun_baru">Belum memiliki akun ?  Daftar <b>Disini</b></string>

    <string name="tinggi"><b>Tinggi : </b></string>
    <string name="rambut"><b>Rambut : </b></string>
    <string name="kulit"><b>Kulit : </b></string>
    <string name="mata"><b>Mata : </b></string>
    <string name="cirik"><b>Ciri Khusus : </b></string>
    <string name="infol"><b>"Info Terakhir : "</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="agama">
        <item>Islam</item>
        <item>Kristen Katholik</item>
        <item>Kristen Protestan</item>
        <item>Hindu</item>
        <item>Budha</item>
        <item>Kong Hu Cu</item>
    </string-array>

    <string-array name="kwn">
        <item>Warga Negara Indonesia (WNI)</item>
        <item>Warga Negara Asing (WNA)</item>
    </string-array>
</resources>